--- a/springboot-elasticsearch/pom.xml
+++ b/springboot-elasticsearch/pom.xml
@@ -59,6 +59,11 @@
         <version>${elasticsearch.version}</version>
     </dependency>
     
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+    </dependency>
+        
     <!-- 测试 -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
