添加验证码

--- a/security-demo/src/main/resources/application.properties
+++ b/security-demo/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=9080
 my.security.loginPage = /my_login.html
 #返回类型设置
 my.security.loginType = JSON
+#验证码
+my.security.image.length = 6
+my.security.image.width = 200
+my.security.image.height = 20
+my.security.image.expireIn = 60
