增加用户信息显示页面

--- a/security-demo/src/main/resources/application.properties
+++ b/security-demo/src/main/resources/application.properties
@@ -9,3 +9,5 @@ my.security.image.length = 6
 my.security.image.width = 200
 my.security.image.height = 20
 my.security.image.expireIn = 60
+
+spring.thymeleaf.cache= false
